# embedded-devtool

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agents/skills/design-taste-frontend-v1/: SKILL.md
.agents/skills/frontend-design/: SKILL.md
.claude/skills/release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  example-test-suite.yaml  g0-benchmark-results.md  ke-hoach-chi-tiet-giai-doan-0-1.md  ke-hoach-phat-trien-embedded-devtool.md  quickstart.md
docs/adr/: 001-tauri-rust-core.md  002-frontend-react.md  003-event-bus.md  004-datastream-trait.md
docs/wireframe/: g0-t12-layout.html
scripts/: release.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: pipeline_benchmark.rs  serial_loopback_benchmark.rs
src-tauri/icons/edt_logo/: logo_128x128.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: data_stream.rs  event_bus.rs  file_logger.rs  keychain.rs  known_hosts.rs  mod.rs  mqtt_stream.rs  net_stream.rs  ring_buffer.rs  rtt_stream.rs  serial_stream.rs  ssh_auth.rs  ssh_stream.rs  stream_pump.rs  ws_stream.rs
src-tauri/src/flash/: backtrace.rs  coredump.rs  elf_analysis.rs  esp32.rs  esp32_ota.rs  esp32_security.rs  mod.rs  partition_table.rs  profile.rs  provision.rs  stm32.rs
src-tauri/src/ftp/: client.rs  mod.rs  server.rs
src-tauri/src/net/: manager.rs  mod.rs  scanner.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/restapi/: mod.rs
src-tauri/src/script/: mod.rs
src-tauri/src/serial/: manager.rs  mod.rs
src-tauri/src/sftp/: client.rs  mod.rs
src-tauri/src/swd/: mod.rs  variables.rs
src-tauri/src/testrunner/: mod.rs
src/api/: flash.ts  ftp.ts  keychain.ts  network.ts  plugin.ts  restapi.ts  script.ts  serial.ts  sftp.ts  stm32.ts
src/components/: BroadcastSendPanel.tsx  CollapsibleSection.tsx  ColorBar.tsx  CommandPalette.tsx  ConnectPanel.tsx  ContextMenu.tsx  CopyButton.tsx  DashboardPanel.tsx  DataInspector.tsx  DebugPanel.tsx  DeepScanModal.tsx  EditorFindBar.tsx  Esp32SecurityPanel.tsx  EventCounterPanel.tsx  FilterBar.tsx  FlashBatchPanel.tsx  FlashPanel.tsx  FrameBuilderPanel.tsx  FtpEditorTabs.tsx  FtpPanel.tsx  FtpTreeSidebar.tsx  FtpWorkspacePanel.tsx  GlobalSearchPanel.tsx  HelpGuide.tsx  LibraryRow.tsx  LogComparePanel.tsx  MacroPanel.tsx  ModbusMasterPanel.tsx  ModbusSlavePanel.tsx  MonitorView.tsx  MqttJsonFieldView.tsx  MqttPanel.tsx  MqttTopicTree.tsx  NetScanPanel.tsx  NotificationBell.tsx  OnboardingScreen.tsx  OtaPanel.tsx  PaneContent.tsx  PaneView.tsx  PlotDock.tsx  (+35 more)
src/i18n/: index.ts  locales.test.ts
src/i18n/locales/: en.json  vi.json
src/lib/: ansi.test.ts  ansi.ts  ansiRender.tsx  beep.ts  colorRules.ts  configBundle.ts  crc.test.ts  crc.ts  dataInspect.test.ts  dataInspect.ts  diagnosticBundle.test.ts  diagnosticBundle.ts  esp32SegmentDetect.test.ts  esp32SegmentDetect.ts  esp32VidPid.test.ts  esp32VidPid.ts  fft.test.ts  fft.ts  filterLines.ts  flashLock.ts  frameBuilder.test.ts  frameBuilder.ts  hex.ts  highlight.tsx  jsonHighlight.test.ts  jsonHighlight.ts  jsonLint.test.ts  jsonLint.ts  jsonPath.ts  layoutTree.test.ts  layoutTree.ts  lineDiff.test.ts  lineDiff.ts  logLevel.ts  memoryContent.test.ts  memoryContent.ts  modbus.test.ts  modbus.ts  modbusFrameAssembler.test.ts  modbusFrameAssembler.ts  (+26 more)
src/state/: connectionProfilesStore.ts  createLibraryStore.ts  debugHandoffStore.ts  filterPresetsStore.ts  flashBatchStore.ts  flashPanelStore.ts  flashStore.ts  frameBuilderStore.ts  ftpStore.ts  ftpTreeStore.ts  lastConnectionStore.ts  layoutStore.ts  mqttPresetsStore.ts  mqttStore.ts  netScanStore.ts  otaStore.ts  periodicSendStore.ts  plotStore.ts  pluginLibraryStore.ts  productionHistoryStore.ts  provisionStore.ts  quickCommandProfilesStore.ts  recentConnectionsStore.ts  scriptLibraryStore.ts  searchHandoffStore.ts  settingsStore.ts  sftpStore.ts  sshTerminalsStore.ts  stm32MassProductionStore.ts  stm32Store.ts  structTemplateStore.ts  swdWatchStore.ts  tabsStore.ts  toastStore.ts  triggerPresetsStore.ts  udpStore.ts  updateStore.ts  wsStore.ts
