[package]
name = "edt"
version = "0.1.3"
description = "Embedded DevTool"
authors = ["EDT Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "edt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
crossbeam-channel = "0.5"
keepawake = { version = "0.6.0", default-features = false }
espflash = { version = "4.4.0", default-features = false, features = ["serialport"] }
tauri-plugin-dialog = "2.7.1"
regex = "1.12.4"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rumqttc = "0.24"
tungstenite = "0.24"
http = "1"
mdns-sd = "0.13"
dns-lookup = "3.0.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
russh = { version = "0.62.2", default-features = false, features = ["flate2", "rsa", "ring"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time"] }
tauri-plugin-clipboard-manager = "2"

