[package]
name = "edt"
version = "0.1.5"
description = "Embedded DevTool"
authors = ["EDT Contributors"]
edition = "2021"
# Without this, adding the edt-cli binary target below made `cargo run`
# ambiguous (two bin targets, no default) -- `cargo tauri dev` runs via
# `cargo run` under the hood, so this keeps that working unchanged.
default-run = "edt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "edt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
crossbeam-channel = "0.5"
keepawake = { version = "0.6.0", default-features = false }
espflash = { version = "4.4.0", default-features = false, features = ["serialport"] }
tauri-plugin-dialog = "2.7.1"
regex = "1.12.4"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rumqttc = "0.24"
tungstenite = "0.24"
http = "1"
mdns-sd = "0.13"
dns-lookup = "3.0.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
russh = { version = "0.62.2", default-features = false, features = ["flate2", "rsa", "ring"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time"] }
tauri-plugin-clipboard-manager = "2"

# ESP32 OTA-over-WiFi (espota protocol) — MD5 for the legacy challenge and
# the firmware checksum, SHA256+PBKDF2 for the current challenge protocol
# (ESP32 Arduino core 3.3.1+). See flash/esp32_ota.rs's module doc.
md-5 = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"

# FTP client/server. suppaftp is a blocking client (matches the rest of this
# codebase's thread-per-connection style, no async needed) — plain FTP only
# for now (no `secure`/TLS feature enabled), since that avoids pulling in
# either OpenSSL or rustls for a first version and most embedded-device FTP
# servers speak plain FTP anyway; FTPS can be added later behind a feature
# flag without an API change on the frontend side.
# libunftp is async/tokio-based for the server side; it gets its own
# current-thread runtime per server instance, the same pattern already used
# for SSH in core/ssh_stream.rs, rather than a shared global runtime.
suppaftp = "10"
# libunftp requires *some* rustls crypto backend at compile time even though
# v1 never turns TLS on at runtime. `ring` is pure Rust (no cmake/C compiler
# needed, unlike the default `aws_lc_rs`, which builds a bundled C crypto
# library) — same "avoid native build deps for CI portability" reasoning as
# elsewhere in this project, and already the crypto backend `russh` uses.
# prometheus/proxy_protocol (metrics/proxy support) are default features
# this app doesn't need, left off.
libunftp = { version = "0.23", default-features = false, features = ["ring"] }
unftp-sbe-fs = "0.4"
# Needed directly (not just transitively via libunftp) to implement a
# username/password Authenticator — see ftp/server.rs.
unftp-core = "0.1"
async-trait = "0.1"

# Local REST API (optional, off by default in Settings) so an external
# CI/production-line system can drive an already-running EDT instance --
# tiny_http is a small blocking HTTP server, matching this codebase's
# "prefer blocking over pulling in more async machinery when it's good
# enough" pattern already used for the FTP client. See restapi/mod.rs.
# The bearer token is generated frontend-side (Web Crypto's
# getRandomValues, already available in the webview) and persisted in
# settingsStore, not here -- the backend only ever receives and checks it.
tiny_http = "0.12"

# ELF/DWARF reading for the ESP32 crash (backtrace) decoder and memory-map
# analyzer (see flash/elf_analysis.rs) -- pure Rust, so no bundled
# toolchain binary (e.g. xtensa-esp32-elf-addr2line) needs to be shipped
# or found on PATH.
object = "0.36"
addr2line = "0.24"

# Only pulled in for the `edt-cli` binary (via the `cli` feature below) —
# optional so a normal GUI build never compiles or links them.
clap = { version = "4", features = ["derive"], optional = true }
ctrlc = { version = "3", optional = true }
# YAML test-suite parsing for `edt-cli test`.
serde_yaml = { version = "0.9", optional = true }
probe-rs = "0.31.0"
gimli = { version = "0.34.0", default-features = false, features = ["read", "std"] }

[features]
cli = ["dep:clap", "dep:ctrlc", "dep:serde_yaml"]

[[bin]]
name = "edt-cli"
path = "src/bin/edt-cli.rs"
required-features = ["cli"]

